# open-data-viz

./: LICENSE  README.md  package.json  pnpm-lock.yaml
data_preparation/: .gitignore  Cargo.toml  README.md  luigi_module.py  package.json  pyproject.toml
data_preparation/constants/: path_constants.py  test_path_constants.py
data_preparation/processed_data/: files_list.txt
data_preparation/processes/: Makefile  __init__.py  common.py  luigi_module.py  luigi_utils.py  test_common.py
data_preparation/processes/commodity_prices/: files_list.txt  luigi_module.py
data_preparation/processes/commodity_prices/utils/: create_autoselect_data.py  download_utils.py  process_utils.py
data_preparation/processes/estat/: utils.py  variables.py
data_preparation/processes/monthly_vegetable_market_amount_by_prefecture/: Makefile  download_from_estat.py  files_list.txt  for_test_0001873398_201901-201912_だいこん_10月.csv  luigi_module.py  my_types.py  test_utils.py  utils.py
data_preparation/processes/prefecture_map/: Makefile  files_list.txt  luigi_module.py  omit_islands.py  test_omit_islands.py
data_preparation/processes/workers_by_age_employment_type_education_sex/: Makefile  download_from_estat_and_save_individual_json.py  files_list.txt  luigi_module.py  utils.py
data_preparation/raw_data/: files_list.txt
data_preparation/src/: main.rs
data_preparation/src/modules/: mod.rs
data_preparation/src/modules/estat_api/: app_id.rs  decoder.rs  get.rs  get_meta_info.rs  get_stats_data.rs  get_stats_list.rs  mod.rs
data_preparation/src/modules/io/: file_writer.rs  mod.rs
(+89 files in other folders)
