[tool.poetry]
name = "data-preparation"
version = "0.1.0"
description = ""
authors = ["MToyokura <mikitoyo6@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
pandas = "^1.5.1"
luigi = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
